# base-app

./: .gitignore  LICENSE.md  README.md  pyproject.toml
base_app/: AboutDialog.py  AbstractMainWindow.py  AbstractModelManager.py  AbstractProject.py  AbstractProjectModel.py  AppContext.py  ProjectManager.py
